Update Social Media HW1 - Final-3.ipynb

--- a/Assignment 1/Social Media HW1 - Final-3.ipynb
+++ b/Assignment 1/Social Media HW1 - Final-3.ipynb
@@ -7,7 +7,7 @@
    },
    "source": [
     "# MSBA SMA Assignment \n",
-    "Emilio Cabrera (eac4622), Conoly Cravens (mcc4443), Ally McNulty (agm3734),  Chaitra Setty (cs63687), Allie Touchstone (awt529)\n",
+    "Emilio Cabrera, Conoly Cravens, Ally McNulty,  Chaitra Setty, Allie Touchstone\n",
     "\n",
     "\n"
    ]
